Return Quote.sending_currency as Currency and bump to 0.0.9
